Tuesday fixes (#38)
* Adds support for XhXmXs timecodes for when video length >1hr

* Implements scrollTo active marker when chapter-list is opened

* Makes video play when a caption is clicked and the video is paused

* Implements chapter folding

* Ensures first/last chapter marker hover text doesn't get clipped by viewport

* Implements take break functionality

* Fixes break bug and builds for production

* Fixes bug where timeout overlay remains after pause then seekto

* Fixes styling bug for break-toggle in portrait

--- a/src/index.scss
+++ b/src/index.scss
@@ -181,6 +181,14 @@ row- {
     }
   }
 
+  break-toggle {
+    display: flex;
+    padding: 1rem;
+    background: #121212;
+    color: rgba(255,255,255,0.5);
+    justify-content: space-between;
+  }
+
   thumb-preview {
     position: absolute;
     bottom: 5rem;
@@ -285,6 +293,14 @@ row- {
     marker-list {
       padding: 1rem;
     }
+  }
+
+  break-toggle {
+    display: flex;
+    padding: 1rem;
+    background: #121212;
+    color: rgba(255,255,255,0.5);
+    justify-content: space-between;
   }
 
   aside {
